# alphawolfedecals-app

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  .lintstagedrc.mjs  .mcp.json  .npmrc  .prettierignore  CLAUDE.md  CODEOWNERS  README.md  activities.md  commitlint.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  posthog-setup-report.md  prd-b2b-print-engine.md  prd-b2c-guided-design-flow.md  prd.md  render.yaml  tsconfig.base.json  turbo.json
.agents/skills/: README.md
.claude/agents/: context-manager.md  vercel-deployment-specialist.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: claude-code-kickoff.md  claude-code-prompts.md  debugging-gotchas.md  graphify-usage.md  journey-and-architecture.html  phase-1-readiness-checklist.md  session-handoff-deploy-cycle.md  vehicle-database-spec.md
prompts/: 06-goal-4-handoff.md  07-goal-5-b2c-phase-1.md  08-goal-6-template-studio.md  09-goal-7-ai-generation.md  10-goal-9-growth-loops.md  17-goal-15-generation-export-correctness.md  21-goal-19-dependency-triage.md  22-goal-20-full-app-test-and-document.md  22a-goal-20-claude-code-signed-in-capture.md  23-goal-21-photo-render-multiview-showcase.md  24-goal-22-print-ready-paneling-engine.md  25-spike-curvature-correction.md  26-goal-20-fixit-launch-blockers.md
scripts/: backup-restore-drill.sh  create-github-issues.sh  purge-project-storage.mjs  seed-issues.py  seed-smoke-accounts.ts
services/paneling/: README.md  pyproject.toml
services/paneling/app/: main.py
services/paneling/tests/: test_health.py
(+557 files in other folders)
